    * When taring bzip2 is used instead of zip (--use-compress-program bzip2 instead of -z). Using zip
        created a different tar file every time something was re-tarred. This caused redundant uploads
        SVN and S3 of files that were not really different.
    * In GUI mode /Admin added indication to SVN repo and S3 bucket.
    * Fixed misleading messages in up-repo-rev


4/12/2014 0.9.19.2

    user visible changes, client:
    * In gui mode: fixed saving state on Quit which failed to work after removing the Quit button.
    * copy_dir_files_to_dir with rsync fixed to really copy only files.

    user visible changes, admin:
    * New variable __INSTL_LAUNCH_COMMAND__ based on new function get_instl_launch_command.
        Will enable running instl from batch file if instl was compiled and if it was not.
    * New variable __USER_DESKTOP_DIR__

    programmer visible changes:
    * Added a flag to ConfigVarList.resolve to allow raising an exception if string was not fully resolved.
        This is useful when dealing with the file system (read file, make dir, ...) and will prevent,
        for example, creations of folders named "$(COMPANY_NAME)".
    * Shorten some variable names,

    gui mode changes:
    * Client input file is now a combo box that lets you choose files from the folder of the current choses input file.

30/11/2014 0.9.19.0

    user visible changes, client:
    * New command gui client mode.
    * disabled gui command when instl is compiled, since PyInstaller cannot find the frameworks required by Tkinter.
    * added Edit button besides all file fields in gui mode
    * implemented uninstall command by filtering the !require file and creating remove instaructions.

    user visible changes, admin:
    * Implemented --limit option to svn2stage
    * Added quoted string handling to --limit options of svn2stage and stage2svn